deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: node
                    operator: In
                    values:
                      - B                       # Umieszczamy backend na węzle B
      containers:
      - name: backend 
        image: nginx
        resources:                    # Obowiązkowo, bo mamy Resource Quota
          limits:
            memory: "256Mi"
            cpu: "200m"
          requests:
            memory: "100Mi"
            cpu: "100m"
