frontend-netpol.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: frontend-netpol
  namespace: frontend                         # W ramach namespace "frontend"
spec:
  podSelector:                                # Do podów z etykietą "app=frontend"
    matchLabels:
      app: frontend
  policyTypes:                                # Definiujemy politykę "wychodzącą" z podów "app=frontend"
  - Egress
  egress:
  - to:
    - podSelector:                            # Mówi że komunikacja jest udostępniona tylko dla podów z
        matchLabels:                          # Etykietą "app=backend" AND znajdujące się w namespace "backend"
          app: backend                        # o etykiecie "ns=backend"
      namespaceSelector:
        matchLabels:
          ns: backend
    ports:                                    # Również robimy możliwą komunikację wychodzącą przez port "80"
    - protocol: TCP                           # na backendzie
      port: 80
